Added rxjs and vizual-rx as extra lib for Monaco editor.

--- a/src/app/vizual-rx-editor/vizual-rx-editor.component.html
+++ b/src/app/vizual-rx-editor/vizual-rx-editor.component.html
@@ -6,4 +6,4 @@
     }
   </mat-select>
 </mat-form-field>
-<ngx-monaco-editor [options]="options" [ngModel]="code" (ngModelChange)="codeChange.next($event)"></ngx-monaco-editor>
+<ngx-monaco-editor [options]="options" (onInit)="init($event)"></ngx-monaco-editor>
