Replaced observable by observer approach.

--- a/src/app/vizual-rx-viewer/vizual-rx-viewer.component.html
+++ b/src/app/vizual-rx-viewer/vizual-rx-viewer.component.html
@@ -1,5 +1,5 @@
 <app-time-track [engine]="engine" class="time-track"></app-time-track>
-<div class="observable-tracks-container">
-  <app-observable-track *ngFor="let observable of observables" [observable]="observable" [engine]="engine">
-  </app-observable-track>
+<div class="observer-tracks-container">
+  <app-observer-track *ngFor="let observer of observers" [observer]="observer" [engine]="engine">
+  </app-observer-track>
 </div>
