--- a/src/theme.scss
+++ b/src/theme.scss
@@ -16,6 +16,6 @@ $theme: mat.define-light-theme(
 @include mat.all-component-themes($theme);
 
 html {
-  --vrx-time-track-color: #{mat.get-theme-color($theme, accent, text)};
+  --vrx-time-track-color: #{mat.get-theme-color($theme, primary, default-contrast)};
   --vrx-observer-track-color: #{mat.get-theme-color($theme, primary, text)};
 }
