--- a/src/app/vizual-rx-editor/vizual-rx-editor.component.html
+++ b/src/app/vizual-rx-editor/vizual-rx-editor.component.html
@@ -1,9 +1,24 @@
-<mat-form-field class="code-samples">
-  <mat-label>Code Sample</mat-label>
-  <mat-select [(ngModel)]="code">
-    @for (codeSample of codeSamples; track codeSample.label) {
-      <mat-option [value]="codeSample.code">{{ codeSample.label }}</mat-option>
-    }
-  </mat-select>
-</mat-form-field>
-<ngx-monaco-editor [options]="options" (onInit)="init($event)"></ngx-monaco-editor>
+<div class="sample-bar">
+  <mat-form-field>
+    <mat-label>Category</mat-label>
+    <mat-select [(ngModel)]="selectedCodeCategory">
+      @for (codeCategory of filteredCodeCategories; track codeCategory) {
+        <mat-option [value]="codeCategory">{{ codeCategory }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="code-samples">
+    <mat-label>Sample</mat-label>
+    <mat-select [(ngModel)]="code">
+      @for (codeSample of filteredCodeSamples; track codeSample.label) {
+        <mat-option [value]="codeSample.code">{{ codeSample.label }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input type="text" matInput [(ngModel)]="filter">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+</div>
+<ngx-monaco-editor [options]="editorOptions" (onInit)="init($event)"></ngx-monaco-editor>
