--- a/src/app/vizual-rx-editor/vizual-rx-editor.component.scss
+++ b/src/app/vizual-rx-editor/vizual-rx-editor.component.scss
@@ -1,11 +1,3 @@
-:host, ngx-monaco-editor {
+.editor {
   height: 100%;
-}
-
-.sample-bar {
-  display: flex;
-}
-
-.code-samples {
-  flex-grow: 1;
 }
