--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,18 @@
 :host {
   height: 100%;
   display: flex;
+  flex-direction: column;
+}
 
-  app-vizual-rx-editor {
-    width: 40%;
-  }
+.navbar {
+  box-shadow: 0 0 10px 0 #2c2e32;
+  z-index: 2;
+}
 
-  .visualizer-container {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-  }
+.main {
+  flex-grow: 1;
+  display: flex;
+  overflow: hidden;
 }
 
 ::ng-deep {
