--- a/src/app/vizual-rx-player/vizual-rx-player.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.html
@@ -1,36 +1,9 @@
-<div class="main-container">
-  <div class="slider-container">
-    <label>Time Speed</label>
-    <mat-slider min="0" max="2" step="0.1" [showTickMarks]="true">
-      <input matSliderThumb [(ngModel)]="engine.timeFactor">
-    </mat-slider>
-    <label>Time Scale</label>
-    <mat-slider min="0.5" max="2" step="0.1" [showTickMarks]="true">
-      <input matSliderThumb [(ngModel)]="timeScale">
-    </mat-slider>
-    <mat-divider [vertical]="true"></mat-divider>
+<svg #timeTrack class="time-track">
+</svg>
+<div class="observer" *ngFor="let observer of observers">
+  <div class="observer-label">
+    <span>{{ observer.label }}</span>
   </div>
-  <div class="button-container">
-    <button mat-mini-fab color="primary" (click)="engine.replay()">
-      <mat-icon>refresh</mat-icon>
-    </button>
-    <button mat-mini-fab color="primary" *ngIf="engine.playing$ | async" (click)="engine.pause()">
-      <mat-icon>pause</mat-icon>
-    </button>
-    <button mat-mini-fab color="primary" *ngIf="!(engine.playing$ | async)" (click)="engine.play()">
-      <mat-icon>play_arrow</mat-icon>
-    </button>
-    <button mat-mini-fab color="primary" (click)="engine.stop()">
-      <mat-icon>stop</mat-icon>
-    </button>
-  </div>
-  <svg #timeTrack class="time-track">
+  <svg #observerTrack class="observer-track" [id]="observer.id">
   </svg>
-  <ng-container *ngFor="let observer of observers">
-    <div class="observer-label">
-      <span>{{ observer.label }}</span>
-    </div>
-    <svg #observerTrack class="observer-track" [id]="observer.id">
-    </svg>
-  </ng-container>
 </div>
