--- a/src/app/vizual-rx-player/vizual-rx-player.component.scss
+++ b/src/app/vizual-rx-player/vizual-rx-player.component.scss
@@ -1,61 +1,46 @@
-@use "@angular/material" as mat;
 @import "../../theme";
 
 :host {
-  height: 100%;
-  background-color: mat.get-theme-color($theme, background, app-bar);
-}
-
-.main-container {
-  display: grid;
-  grid-template-columns: 150px 1fr;
-  row-gap: 0.5em;
-  overflow: auto;
-  padding: 0 1em 1em;
-}
-
-.slider-container {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  margin-left: auto;
   display: flex;
-  align-items: center;
-}
-
-.button-container {
-  display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  gap: 0.8em;
+  padding: 1em;
 }
 
 .time-track {
+  width: 100%;
   height: 30px;
-  background-image: linear-gradient(mat.get-theme-color($theme, primary, default), mat.get-theme-color($theme, primary, darker));
-  border: 1px solid mat.get-theme-color($theme, primary, darker);
-  border-radius: 5px;
+  flex-shrink: 0;
+  background-image: $player-component-background;
+  border: $player-component-border;
+  border-radius: $player-component-border-radius;
   position: sticky;
   top: 0;
-  width: 100%;
-  margin: auto;
+}
+
+.observer {
+  height: 80px;
+  flex-shrink: 0;
+  display: flex;
+  border: $player-component-border;
+  border-radius: $player-component-border-radius;
+  overflow: hidden;
 }
 
 .observer-label {
-  background-image: linear-gradient(mat.get-theme-color($theme, primary, default), mat.get-theme-color($theme, primary, darker));
-  border-top-right-radius: 20px;
-  border: 1px solid mat.get-theme-color($theme, primary, darker);
-  box-sizing: border-box;
-  height: 80px;
+  background-image: $player-component-background;
+  border-right: $player-component-border;
+  width: 150px;
 
   span {
     padding: 0.8em;
     display: block;
-    color: mat.get-theme-color($theme, primary, default-contrast);
+    color: $player-component-color;
   }
 }
 
 .observer-track {
-  background-image: linear-gradient(mat.get-theme-color($theme, background, app-bar), mat.get-theme-color($theme, primary, 50));
-  border-bottom: 2px solid mat.get-theme-color($theme, primary, default);
-  box-sizing: border-box;
+  background-color: $player-observer-track-background;
   height: 80px;
   width: 100%;
 }
