--- a/src/app/vizual-rx-side-menu/vizual-rx-side-menu.component.scss
+++ b/src/app/vizual-rx-side-menu/vizual-rx-side-menu.component.scss
@@ -18,14 +18,14 @@
   overflow: auto;
   padding: 1em;
 
-  .menu {
+  .menu-0 {
     margin-bottom: 1em;
     font-weight: 400;
     font-size: 1.2em;
     white-space: nowrap;
   }
 
-  .sub-menu {
+  .menu-1 {
     margin-top: 1em;
     margin-bottom: 0.5em;
     font-weight: 500;
