--- a/src/app/vizual-rx-side-menu/vizual-rx-side-menu.component.scss
+++ b/src/app/vizual-rx-side-menu/vizual-rx-side-menu.component.scss
@@ -14,18 +14,18 @@
   }
 }
 
-.menu-list {
+.section-list {
   overflow: auto;
   padding: 1em;
 
-  .menu-0 {
+  .section-0 {
     margin-bottom: 1em;
     font-weight: 400;
     font-size: 1.2em;
     white-space: nowrap;
   }
 
-  .menu-1 {
+  .section-1 {
     margin-top: 1em;
     margin-bottom: 0.5em;
     font-weight: 500;
