--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  ::ng-deep {
+    .mat-drawer-inner-container, .mat-drawer-content {
+      overflow: hidden;
+    }
+  }
 }
 
 .navbar {
@@ -9,10 +15,17 @@
   z-index: 2;
 }
 
+.sidenav {
+  box-shadow: 0 0 10px 0 #bdbdbd;
+}
+
 .main {
   flex-grow: 1;
-  display: flex;
   overflow: hidden;
+}
+
+.page {
+  flex-grow: 1;
 }
 
 ::ng-deep {
