--- a/src/app/vizual-rx-page/vizual-rx-page.component.html
+++ b/src/app/vizual-rx-page/vizual-rx-page.component.html
@@ -5,7 +5,8 @@
         <span>
           {{ page.title }}
         </span>
-      <a mat-button *ngIf="page.documentationUrl" [attr.href]="page.documentationUrl" target="_blank" matTooltip="Official Documentation">
+      <a mat-button *ngIf="page.documentationUrl" [attr.href]="page.documentationUrl" target="_blank"
+         matTooltip="Official Documentation">
         <mat-icon [fontSet]="'material-symbols-rounded'">book_5</mat-icon>
       </a>
     </h1>
@@ -14,5 +15,11 @@
   <app-vizual-rx-editor class="editor" [(code)]="engine.code"></app-vizual-rx-editor>
 </div>
 <div class="right-panel">
-  <app-vizual-rx-player></app-vizual-rx-player>
+  <div [hidden]="engine.error">
+    <app-vizual-rx-player></app-vizual-rx-player>
+  </div>
+  <div *ngIf="engine.error as err" class="error-panel">
+    <h2>Execution error</h2>
+    <span>{{ err.name }}: {{ err.message }}</span>
+  </div>
 </div>
