Added playground page

--- a/src/app/vizual-rx-sidenav/vizual-rx-sidenav.component.scss
+++ b/src/app/vizual-rx-sidenav/vizual-rx-sidenav.component.scss
@@ -18,15 +18,14 @@
   padding: 1em;
 
   .section-0 {
-    margin-bottom: 1em;
+    padding: 0.8em 0;
     font-weight: 400;
     font-size: 1.2em;
     white-space: nowrap;
   }
 
   .section-1 {
-    margin-top: 1em;
-    margin-bottom: 0.5em;
+    padding: 0.5em 0 0.5em 0.5em;
     font-weight: 500;
     white-space: nowrap;
   }
