--- a/src/app/vizual-rx-page/vizual-rx-page.component.scss
+++ b/src/app/vizual-rx-page/vizual-rx-page.component.scss
@@ -43,6 +43,14 @@
   overflow: auto;
 }
 
+.spinner-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .error-panel {
   margin: 1em;
   padding: 1em;
