--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <span>VizualRx</span>
 </mat-toolbar>
-
+<mat-progress-bar mode="indeterminate" [style.visibility]="(loading$ | async) ? 'visible' : 'hidden'"></mat-progress-bar>
 <mat-drawer-container class="main">
   <mat-drawer class="sidenav" mode="side" [opened]="sidenavOpenedState$ | async" (opened)="sidenavOpenedChanged()"
               (closed)="sidenavOpenedChanged()">
