Added creation operators + some small improvements

--- a/src/app/vizual-rx-page/vizual-rx-page.component.html
+++ b/src/app/vizual-rx-page/vizual-rx-page.component.html
@@ -5,22 +5,23 @@
         <span>
           {{ page.title }}
         </span>
+      <span *ngIf="page.deprecated" class="deprecated-tag">Deprecated</span>
       <a mat-button *ngIf="page.documentationUrl" [attr.href]="page.documentationUrl" target="_blank"
          matTooltip="Official Documentation">
-        <mat-icon [fontSet]="'material-symbols-rounded'">book_5</mat-icon>
+        <mat-icon [fontSet]="'material-symbols-rounded'">book_2</mat-icon>
       </a>
     </h1>
     <ng-container *ngComponentOutlet="page.detailsComponent"/>
   </div>
-  <app-vizual-rx-editor class="editor" [(code)]="engine.code" (codeChange)="onCodeChange($event)"></app-vizual-rx-editor>
+  <app-vizual-rx-editor class="editor" [(code)]="code" (codeChange)="onCodeChange($event)"></app-vizual-rx-editor>
 </div>
 <div class="right-panel">
   <div [hidden]="engine.error">
     <app-vizual-rx-player></app-vizual-rx-player>
   </div>
-  <div *ngIf="engine.error as err" class="error-panel">
-    <h2>{{ err.name }}</h2>
+  <app-alert-message type="danger" *ngIf="engine.error as err" class="error-panel">
+    <h2>{{ err.label }}</h2>
     <span>{{ err.name }}: {{ err.message }}</span>
     <pre *ngIf="err.stack">{{ err.stack }}</pre>
-  </div>
+  </app-alert-message>
 </div>
