--- a/src/app/pages/combine-all/combine-all-details/combine-all-details.component.html
+++ b/src/app/pages/combine-all/combine-all-details/combine-all-details.component.html
@@ -1,3 +1,6 @@
+<app-alert-message type="info">
+  Deprecation Notes: Renamed to combineLatestAll. Will be removed in v8.
+</app-alert-message>
 <p>
   When source observable completes use <a [routerLink]="['/combine-latest']">combineLatest</a> with collected observables.
 </p>
