--- a/src/app/vizual-rx-page/vizual-rx-page.component.scss
+++ b/src/app/vizual-rx-page/vizual-rx-page.component.scss
@@ -27,14 +27,29 @@
 .content-header {
   display: flex;
   align-items: center;
+  gap: 0.2em;
 
   a {
     min-width: inherit;
-    margin-left: 0.5em;
+    padding: 0.2em;
+    color: #4b4b4b;
 
     & > mat-icon {
       margin: 0;
+      width: 1em;
+      height: 1em;
+      font-size: 25px;
     }
+  }
+
+  .deprecated-tag {
+    border-radius: 5px;
+    font-size: 13px;
+    line-height: 13px;
+    background-color: #7f7b7b;
+    padding: 4px;
+    color: white;
+    text-transform: uppercase;
   }
 }
 
@@ -53,11 +68,6 @@
 
 .error-panel {
   margin: 1em;
-  padding: 1em;
-  background: #ffe7e7;
-  border: 1px solid #a10000;
-  border-radius: 10px;
-  color: #a10000;
 
   pre {
     overflow: auto;
