Changed operators base url

--- a/src/app/vizual-rx-page/operators/join/combine-all/combine-all-details/combine-all-details.component.html
+++ b/src/app/vizual-rx-page/operators/join/combine-all/combine-all-details/combine-all-details.component.html
@@ -2,5 +2,5 @@
   Deprecation Notes: Renamed to combineLatestAll. Will be removed in v8.
 </app-alert-message>
 <p>
-  When source observable completes use <a [routerLink]="['/combine-latest']">combineLatest</a> with collected observables.
+  When source observable completes use <a [routerLink]="['/operators/combine-latest']">combineLatest</a> with collected observables.
 </p>
