--- a/src/app/vizual-rx-page/operators/creation/empty/empty-details/empty-details.component.html
+++ b/src/app/vizual-rx-page/operators/creation/empty/empty-details/empty-details.component.html
@@ -1,4 +1,4 @@
-<app-alert-message type="info">
+<app-alert-message type="warning">
   Deprecation Notes: Replaced with the EMPTY constant or scheduled (e.g. scheduled([], scheduler)). Will be removed in v8.
 </app-alert-message>
 <p>
