--- a/src/app/vizual-rx-page/operators/join/combine-all/combine-all-details/combine-all-details.component.html
+++ b/src/app/vizual-rx-page/operators/join/combine-all/combine-all-details/combine-all-details.component.html
@@ -1,4 +1,4 @@
-<app-alert-message type="info">
+<app-alert-message type="warning">
   Deprecation Notes: Renamed to combineLatestAll. Will be removed in v8.
 </app-alert-message>
 <p>
