--- a/src/app/vizual-rx-sidenav/vizual-rx-sidenav.component.scss
+++ b/src/app/vizual-rx-sidenav/vizual-rx-sidenav.component.scss
@@ -31,7 +31,7 @@
       border-radius: 16px;
 
       .mat-icon {
-        transition: all 0.2s ease;
+        transition: all 0.2s ease-out;
         font-size: 24px;
         margin: 0;
         height: 1em;
@@ -76,7 +76,7 @@
   }
 
   .section-children-container {
-    transition: all 0.2s ease;
+    transition: all 0.2s ease-out;
     overflow: hidden;
     opacity: 1;
   }
