Added filtering operators

--- a/src/app/vizual-rx-page/operators/transformation/merge-scan/merge-scan-details/merge-scan-details.component.html
+++ b/src/app/vizual-rx-page/operators/transformation/merge-scan/merge-scan-details/merge-scan-details.component.html
@@ -1,1 +1,4 @@
-<p>merge-scan-details works!</p>
+<p>
+  Applies an accumulator function over the source Observable where the accumulator function itself returns an
+  Observable, then each intermediate Observable returned is merged into the output Observable.
+</p>
