--- a/src/app/vizual-rx-page/operators/transformation/switch-map-to/switch-map-to-details/switch-map-to-details.component.html
+++ b/src/app/vizual-rx-page/operators/transformation/switch-map-to/switch-map-to-details/switch-map-to-details.component.html
@@ -1,1 +1,8 @@
-<p>switch-map-to-details works!</p>
+<app-alert-message type="warning">
+  Deprecation Notes: Will be removed in v9. Use <a [routerLink]="['/operators/merge-map']">switchMap</a> instead:
+  switchMap(() => result)
+</app-alert-message>
+<p>
+  Projects each source value to the same Observable which is flattened multiple times with switchMap in the output
+  Observable.
+</p>
